--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   },
   "devDependencies": {
     "grunt": "0.4.4",
-    "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-qunit": "~0.3.0",
-    "load-grunt-tasks": "~0.4.0",
     "grunt-contrib-connect": "~0.7.1",
-    "grunt-contrib-sass": "~0.7.3"
+    "grunt-contrib-sass": "~0.7.3",
+    "load-grunt-tasks": "~0.4.0"
   }
 }
